2009-02-06  Mark Ellis <mark@mpellis.org.uk>

	* added synce-unlock.py, script to unlock a device
	  from the command line
	* configure.ac.in - added better checking of hal addon dir

2009-01-26  Mark Ellis <mark@mpellis.org.uk>

	* 0.13.1 release
	* configure.ac.in - fixed non-POSIX conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.13 release

2008-11-19  Mark Ellis <mark@mpellis.org.uk>

	* add hal fields used by gnome-volume-manager

2008-11-13  Mark Ellis <mark@mpellis.org.uk>

	* improve bluetooth support, can be enabled through configure

2008-11-12  Mark Ellis <mark@mpellis.org.uk>

	* provide sparse config file for dhclient, specify lease
	  and pid file names
	* release dhcp lease on device disconnect

2008-10-28  Mark Ellis <mark@mpellis.org.uk>

	* src/utils.c - correct use of g_debug()
	* src/synce-connection-broker.c - close fd used to pass
	  connection to user clients

2008-10-16  Mark Ellis <mark@mpellis.org.uk>

	* etc/synce-hal.conf.in - replaces synce-serial.conf.in, an
	  (optional) .ini style config file instead of a shell snippet
	* configure.ac.in - added new config file
	* hal/hal-synce-rndis.in - use new config file, structural
	  improvements
	* hal/hal-synce-serial.in - new python version, uses new 
	  config file

2008-09-01  Mark Ellis <mark@mpellis.org.uk>

	* hal/hal-synce-rndis.in - catch os exceptions, improve logging

2008-07-30  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in: default hal addon dir to hal's $libdir/hal
	  and add option to override
	* hal/Makefile.am: install addon scripts to determined dir

2008-07-19  Mark Ellis <mark@mpellis.org.uk>

	* hal-synce-rndis.in: fix for dhclient output format change
	* remove patches dir, no longer required

2008-07-07  Mark Ellis <mark@mpellis.org.uk>

	* hal-synce-serial.in: always add updetach to pppd options

2008-05-07  Mark Ellis <mark@mpellis.org.uk>

	* 10-synce.fdi: fix to freebsd ucom match
	* hal-synce-serial.in: use ':' instead of /bin/true as no-op,